Pending changes in the mainline
===============================

* Support of dynamic linking against the system-wide Orthanc framework library


Version 1.0 (2019-03-04)
========================

* Initial release


2018-09-17
==========

* Initial publication of the source code